pinterest icon alignment fix

--- a/dev/less/app.less
+++ b/dev/less/app.less
@@ -122,6 +122,9 @@ main {
 }
 
 /* General font styles */
+.svg {
+	height: auto;
+}
 .mail {
 	width: @mailSvgWidth;
 }
@@ -377,7 +380,6 @@ header {
 
 	.package-icon {
 		width: @pricingIconDefault;
-		height: auto;
 
 		//Package icon image converted to svg by JS
 		* {
